[tool.poetry]
name = "mtc-prod-homologados"
version = "0.1.0"
description = "mejor interactividad con los productos vistos"
authors = ["tjhon <fr.jhonk@gmail.com>"]
license = "APACHE 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.3"
bs4 = "^0.0.2"
lxml = "^5.3.0"
tqdm = "^4.66.5"
googlesearch-python = "^1.2.5"
duckduckgo-search = "^6.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
